exports[`Battery classCompile matches snapshot 1`] = `
Object {
  "py1": Object {
    "padding-bottom": "0.6rem",
    "padding-top": "0.6rem",
  },
}
`;

exports[`Battery positionCoordinateProps matches snapshot 1`] = `undefined`;

exports[`Battery propsCompile matches snapshot 1`] = `
Object {
  "margin": Array [
    Object {
      "propName": "m",
      "props": Array [
        "margin",
      ],
    },
    Object {
      "propName": "mt",
      "props": Array [
        "margin-top",
      ],
    },
    Object {
      "propName": "mx",
      "props": Array [
        "margin-right",
        "margin-left",
      ],
    },
  ],
  "padding": Array [
    Object {
      "propName": "p",
      "props": Array [
        "padding",
      ],
    },
    Object {
      "propName": "pt",
      "props": Array [
        "padding-top",
      ],
    },
    Object {
      "propName": "px",
      "props": Array [
        "padding-right",
        "padding-left",
      ],
    },
  ],
}
`;

exports[`Battery spacingProps matches snapshot 1`] = `
Object {
  "margin": Array [
    Object {
      "propName": "m",
      "props": Array [
        "margin",
      ],
    },
    Object {
      "propName": "mt",
      "props": Array [
        "margin-top",
      ],
    },
    Object {
      "propName": "mr",
      "props": Array [
        "margin-right",
      ],
    },
    Object {
      "propName": "mb",
      "props": Array [
        "margin-bottom",
      ],
    },
    Object {
      "propName": "ml",
      "props": Array [
        "margin-left",
      ],
    },
    Object {
      "propName": "mx",
      "props": Array [
        "margin-right",
        "margin-left",
      ],
    },
    Object {
      "propName": "my",
      "props": Array [
        "margin-top",
        "margin-bottom",
      ],
    },
  ],
  "padding": Array [
    Object {
      "propName": "p",
      "props": Array [
        "padding",
      ],
    },
    Object {
      "propName": "pt",
      "props": Array [
        "padding-top",
      ],
    },
    Object {
      "propName": "pr",
      "props": Array [
        "padding-right",
      ],
    },
    Object {
      "propName": "pb",
      "props": Array [
        "padding-bottom",
      ],
    },
    Object {
      "propName": "pl",
      "props": Array [
        "padding-left",
      ],
    },
    Object {
      "propName": "px",
      "props": Array [
        "padding-right",
        "padding-left",
      ],
    },
    Object {
      "propName": "py",
      "props": Array [
        "padding-top",
        "padding-bottom",
      ],
    },
  ],
}
`;
